[gd_scene load_steps=9 format=2]

[ext_resource path="res://SoldierEnemy_rocket.gd" type="Script" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_rocketlauncher/character_rocketlaunchersoldier_preparing.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_rocketlauncher/character_rocketlaunchersoldier_ready.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_rocketlauncher/character_rocketlaunchersoldier_inactive.png" type="Texture" id=4]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_rocketlauncher/character_rocketlaunchersoldier_hurt.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "prep",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 11 )

[sub_resource type="CircleShape2D" id=3]
radius = 176.026

[node name="SoldierEnemy_rocket" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.499999 )
scale = Vector2( 1, 1.04545 )
frames = SubResource( 1 )
animation = "hurt"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 15, 3 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3, 4 )
shape = SubResource( 3 )

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.75
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
